plugins {
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13

dependencies {
//    compileOnly 'org.projectlombok:lombok:1.18.20'
//    annotationProcessor 'org.projectlombok:lombok:1.18.20'
//    testCompileOnly 'org.projectlombok:lombok:1.18.20'
//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
}


